--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2.6.0",
     "@tauri-apps/plugin-fs": "~2.4.5",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-store": "~2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
